2009-08-06  higepon  <higepon@users.sourceforge.jp>

	* Makefile.am (install-data-hook): Fixed a premission problem on installation.

2009-08-04  higepon  <higepon@users.sourceforge.jp>

	* RELNOTE: Updated for next release.

	* Check lists are same length on map, for-each, for-all, exists, fold-right, and fold-left. (Issue 31 pointed out by leque).

2009-08-03  higepon  <higepon@users.sourceforge.jp>

	* OSCompat.cpp (nativeTranscoder): Change the error policy to RAISE_ERROR. (Issue 80).

	* UTF8Codec.cpp : Fixed short cut bug.

2009-08-02  OKUMURA Yuki <mjt@cltn.org>
	
        * configure.ac : implies port specific options (gc-7.1 win32 threads /
	gc-7.2 will fix this)

2009-07-31  higepon  <higepon@users.sourceforge.jp>

	* StringProcedures.cpp : Fixed string-set didn't check index.
	                         Fixed make-string didn't check size.

	* lib/lambda/wiki.ss : Delete on empty body.

	* lib/lambda/wiki.ss : Added backup function.

	* lib/lambda/wiki.ss : Added spam-block-qustion.

	* lib/mosh/cgi.ss (unauthorized-header): Added.

	* Fixed a behavior of write-to-file when a file doesn't exist.

        * library.scm (open-output-file): Fixed for existing file.

2009-07-30  higepon  <higepon@users.sourceforge.jp>

        * lib/srfi/%3a2/and-let%2a.sls (srfi): Fixed a wrong import on (srfi :2).

2009-07-29  higepon  <higepon@users.sourceforge.jp>

        * r6rs-examples/wiki: Fixed some new features.

        * lib/mosh/cgi.ss (decode): Fixed a bug about make-custom-binary-input-port.

        * test/cgi.scm: Added tests for (mosh cgi).

2009-07-28  higepon  <higepon@users.sourceforge.jp>

        * library.scm (create-mosh-cache-dir): LOCALAPPDATA.

        * Fasl.h (scheme): Added Ratnum and Compnum support.

        * Bignum.h (scheme): Added serialize/deserialize.

2009-07-27  higepon  <higepon@users.sourceforge.jp>

        * library.scm (create-mosh-cache-dir): Now mosh uses /tmp, if HOME not found.
